fix bug: Gridlist container overflow hidden

--- a/src/shared/pages/RestaurantDetail/index.css
+++ b/src/shared/pages/RestaurantDetail/index.css
@@ -28,6 +28,7 @@
 }
 
 .gridListContainer {
+  overflow: hidden;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
